upload last year file

--- a/src/assets/css/note-detail.less
+++ b/src/assets/css/note-detail.less
@@ -1,6 +1,12 @@
 #note-detail {
   display: flex;
   flex-direction: column;
+  .note-empty {
+    font-size: 50px;
+    color:#ccc;
+    text-align: center;
+    margin-top: 100px;
+  }
   .note-bar {
     padding: 4px 20px;
     border-bottom: 1px solid #eee;
@@ -35,6 +41,7 @@
   .editor {
     flex: 1;
     position: relative;
+    height: 1000px;
   }
   textarea, .preview {
     position: absolute;
